# tiny-NPU

./: .gitignore  Makefile  README.md
include/: graph_isa.h
models/: batchnorm_pool_test.onnx  gather_test.onnx  math_test.onnx  reduce_test.onnx  slice_concat_test.onnx  stress_test.onnx
python/: __init__.py  requirements.txt
python/golden/: __init__.py  attention_head_ref.py  gelu_ref.py  gemm_ref.py  gpt2_block_ref.py  gpt2_infer_golden.py  layernorm_ref.py  quant.py  softmax_ref.py
python/onnx_compiler/: compile.py  gen_batchnorm_pool_onnx.py  gen_fuzz_onnx.py  gen_gather_onnx.py  gen_math_onnx.py  gen_reduce_onnx.py  gen_slice_concat_onnx.py  gen_stress_onnx.py
python/tests/: __init__.py  test_end2end.py
python/tools/: __init__.py  ddr_map.py  export_gpt2_weights.py  kv_map.py  make_lut.py  quantize_pack.py  ucode_asm.py
rtl/: top.sv
rtl/bus/: axi_dma_rd.sv  axi_dma_wr.sv  axi_lite_regs.sv  axi_types.sv
rtl/ctrl/: addr_gen.sv  barrier.sv  kv_ctrl.sv  scoreboard.sv  ucode_decode.sv  ucode_fetch.sv
rtl/gemm/: gemm_ctrl.sv  gemm_post.sv  mac_int8.sv  pe.sv  systolic_array.sv
rtl/graph/: avgpool2d_engine.sv  concat_engine.sv  gather_engine.sv  graph_dispatch.sv  graph_exp_lut.sv  graph_isa_pkg.sv  graph_log_lut.sv  graph_rsqrt_lut.sv  graph_sqrt_lut.sv  graph_top.sv  math_engine.sv  reduce_engine.sv  slice_engine.sv
rtl/mem/: banked_sram.sv  kv_cache_bank.sv  sram_dp.sv
rtl/ops/: exp_lut.sv  gelu_engine.sv  gelu_lut.sv  layernorm_engine.sv  mean_var_engine.sv  recip_lut.sv  reduce_max.sv  reduce_sum.sv  rsqrt_lut.sv  softmax_engine.sv  vec_engine.sv
rtl/pkg/: fixed_pkg.sv  isa_pkg.sv  kv_pkg.sv  npu_pkg.sv
scripts/: gen_math_luts.py
sim/verilator/: CMakeLists.txt  engine_tb_top.sv  gpt2_block_top.sv  integration_top.sv  llama_block_top.sv  onnx_sim_top.sv  run_demo.sh  tb_demo_infer.cpp  tb_engines.cpp  tb_gpt2_block.cpp  tb_integration.cpp  tb_kv_cache_sim.cpp  tb_llama_block.cpp  tb_llama_demo_infer.cpp  tb_onnx_batchnorm_pool.cpp  tb_onnx_fuzz.cpp  tb_onnx_gather.cpp  tb_onnx_math.cpp  tb_onnx_reduce.cpp  tb_onnx_slice_concat.cpp  tb_onnx_stress.cpp  tb_top.cpp
